compil-docker/projects/sintatico/sintatico.output
Grammar

    0 $accept: programa $end

    1 programa: cabecalho variaveis T_INICIO lista_comandos T_FIM

    2 cabecalho: T_PROGRAMA T_IDENTIF

    3 variaveis: %empty
    4          | declaracao_variaveis

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    6                     | tipo lista_variaveis

    7 tipo: T_INTEIRO
    8     | T_LOGICO

    9 lista_variaveis: T_IDENTIF lista_variaveis
   10                | T_IDENTIF

   11 lista_comandos: %empty
   12               | comando lista_comandos

   13 comando: leitura
   14        | escrita
   15        | repita
   16        | repeticao
   17        | selecao
   18        | atribuicao

   19 leitura: T_LEIA T_IDENTIF

   20 escrita: T_ESCREVA expr

   21 repeticao: T_ENQTO expr T_FACA lista_comandos T_FIMENQTO

   22 repita: T_REPITA lista_comandos T_ATE expr T_FIMREPITA

   23 selecao: T_SE expr T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

   24 atribuicao: T_IDENTIF T_ATRIB expr

   25 expr: expr T_VEZES expr
   26     | expr T_DIV expr
   27     | expr T_MAIS expr
   28     | expr T_MENOS expr
   29     | expr T_MAIOR expr
   30     | expr T_MENOR expr
   31     | expr T_IGUAL expr
   32     | expr T_E expr
   33     | expr T_OU expr
   34     | termo

   35 termo: T_IDENTIF
   36      | T_NUMERO
   37      | T_V
   38      | T_F
   39      | T_NAO termo
   40      | T_ABRE expr T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 2
    T_FIM (259) 1
    T_LEIA (260) 19
    T_INICIO (261) 1
    T_ESCREVA (262) 20
    T_SE (263) 23
    T_ENTAO (264) 23
    T_SENAO (265) 23
    T_FIMSE (266) 23
    T_ENQTO (267) 21
    T_FIMENQTO (268) 21
    T_FACA (269) 21
    T_REPITA (270) 22
    T_ATE (271) 22
    T_FIMREPITA (272) 22
    T_INTEIRO (273) 7
    T_LOGICO (274) 8
    T_V (275) 37
    T_F (276) 38
    T_MAIS (277) 27
    T_MENOS (278) 28
    T_VEZES (279) 25
    T_E (280) 32
    T_OU (281) 33
    T_NAO (282) 39
    T_MAIOR (283) 29
    T_MENOR (284) 30
    T_ATRIB (285) 24
    T_ABRE (286) 40
    T_FECHA (287) 40
    T_IDENTIF (288) 2 9 10 19 24 35
    T_NUMERO (289) 36
    T_IGUAL (290) 31
    T_DIV (291) 26


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    programa (38)
        on left: 1
        on right: 0
    cabecalho (39)
        on left: 2
        on right: 1
    variaveis (40)
        on left: 3 4
        on right: 1
    declaracao_variaveis (41)
        on left: 5 6
        on right: 4 5
    tipo (42)
        on left: 7 8
        on right: 5 6
    lista_variaveis (43)
        on left: 9 10
        on right: 5 6 9
    lista_comandos (44)
        on left: 11 12
        on right: 1 12 21 22 23
    comando (45)
        on left: 13 14 15 16 17 18
        on right: 12
    leitura (46)
        on left: 19
        on right: 13
    escrita (47)
        on left: 20
        on right: 14
    repeticao (48)
        on left: 21
        on right: 16
    repita (49)
        on left: 22
        on right: 15
    selecao (50)
        on left: 23
        on right: 17
    atribuicao (51)
        on left: 24
        on right: 18
    expr (52)
        on left: 25 26 27 28 29 30 31 32 33 34
        on right: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 40
    termo (53)
        on left: 35 36 37 38 39 40
        on right: 34 39


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    2 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    1 programa: cabecalho . variaveis T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 3 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    2 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 2 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    7 tipo: T_INTEIRO .

    $default  reduce using rule 7 (tipo)


State 7

    8 tipo: T_LOGICO .

    $default  reduce using rule 8 (tipo)


State 8

    1 programa: cabecalho variaveis . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 11


State 9

    4 variaveis: declaracao_variaveis .

    $default  reduce using rule 4 (variaveis)


State 10

    5 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    6                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13


State 11

    1 programa: cabecalho variaveis T_INICIO . lista_comandos T_FIM

    T_LEIA     shift, and go to state 14
    T_ESCREVA  shift, and go to state 15
    T_SE       shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_REPITA   shift, and go to state 18
    T_IDENTIF  shift, and go to state 19

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 20
    comando         go to state 21
    leitura         go to state 22
    escrita         go to state 23
    repeticao       go to state 24
    repita          go to state 25
    selecao         go to state 26
    atribuicao      go to state 27


State 12

    9 lista_variaveis: T_IDENTIF . lista_variaveis
   10                | T_IDENTIF .

    T_IDENTIF  shift, and go to state 12

    $default  reduce using rule 10 (lista_variaveis)

    lista_variaveis  go to state 28


State 13

    5 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    6                     | tipo lista_variaveis .

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 6 (declaracao_variaveis)

    declaracao_variaveis  go to state 29
    tipo                  go to state 10


State 14

   19 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 30


State 15

   20 escrita: T_ESCREVA . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 37
    termo  go to state 38


State 16

   23 selecao: T_SE . expr T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 39
    termo  go to state 38


State 17

   21 repeticao: T_ENQTO . expr T_FACA lista_comandos T_FIMENQTO

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 40
    termo  go to state 38


State 18

   22 repita: T_REPITA . lista_comandos T_ATE expr T_FIMREPITA

    T_LEIA     shift, and go to state 14
    T_ESCREVA  shift, and go to state 15
    T_SE       shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_REPITA   shift, and go to state 18
    T_IDENTIF  shift, and go to state 19

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 41
    comando         go to state 21
    leitura         go to state 22
    escrita         go to state 23
    repeticao       go to state 24
    repita          go to state 25
    selecao         go to state 26
    atribuicao      go to state 27


State 19

   24 atribuicao: T_IDENTIF . T_ATRIB expr

    T_ATRIB  shift, and go to state 42


State 20

    1 programa: cabecalho variaveis T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 43


State 21

   12 lista_comandos: comando . lista_comandos

    T_LEIA     shift, and go to state 14
    T_ESCREVA  shift, and go to state 15
    T_SE       shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_REPITA   shift, and go to state 18
    T_IDENTIF  shift, and go to state 19

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 44
    comando         go to state 21
    leitura         go to state 22
    escrita         go to state 23
    repeticao       go to state 24
    repita          go to state 25
    selecao         go to state 26
    atribuicao      go to state 27


State 22

   13 comando: leitura .

    $default  reduce using rule 13 (comando)


State 23

   14 comando: escrita .

    $default  reduce using rule 14 (comando)


State 24

   16 comando: repeticao .

    $default  reduce using rule 16 (comando)


State 25

   15 comando: repita .

    $default  reduce using rule 15 (comando)


State 26

   17 comando: selecao .

    $default  reduce using rule 17 (comando)


State 27

   18 comando: atribuicao .

    $default  reduce using rule 18 (comando)


State 28

    9 lista_variaveis: T_IDENTIF lista_variaveis .

    $default  reduce using rule 9 (lista_variaveis)


State 29

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 5 (declaracao_variaveis)


State 30

   19 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 19 (leitura)


State 31

   37 termo: T_V .

    $default  reduce using rule 37 (termo)


State 32

   38 termo: T_F .

    $default  reduce using rule 38 (termo)


State 33

   39 termo: T_NAO . termo

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    termo  go to state 45


State 34

   40 termo: T_ABRE . expr T_FECHA

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 46
    termo  go to state 38


State 35

   35 termo: T_IDENTIF .

    $default  reduce using rule 35 (termo)


State 36

   36 termo: T_NUMERO .

    $default  reduce using rule 36 (termo)


State 37

   20 escrita: T_ESCREVA expr .
   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_VEZES  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_DIV    shift, and go to state 55

    $default  reduce using rule 20 (escrita)


State 38

   34 expr: termo .

    $default  reduce using rule 34 (expr)


State 39

   23 selecao: T_SE expr . T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE
   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    T_ENTAO  shift, and go to state 56
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_VEZES  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_DIV    shift, and go to state 55


State 40

   21 repeticao: T_ENQTO expr . T_FACA lista_comandos T_FIMENQTO
   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    T_FACA   shift, and go to state 57
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_VEZES  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_DIV    shift, and go to state 55


State 41

   22 repita: T_REPITA lista_comandos . T_ATE expr T_FIMREPITA

    T_ATE  shift, and go to state 58


State 42

   24 atribuicao: T_IDENTIF T_ATRIB . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 59
    termo  go to state 38


State 43

    1 programa: cabecalho variaveis T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 1 (programa)


State 44

   12 lista_comandos: comando lista_comandos .

    $default  reduce using rule 12 (lista_comandos)


State 45

   39 termo: T_NAO termo .

    $default  reduce using rule 39 (termo)


State 46

   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr
   40 termo: T_ABRE expr . T_FECHA

    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_VEZES  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_FECHA  shift, and go to state 60
    T_IGUAL  shift, and go to state 54
    T_DIV    shift, and go to state 55


State 47

   27 expr: expr T_MAIS . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 61
    termo  go to state 38


State 48

   28 expr: expr T_MENOS . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 62
    termo  go to state 38


State 49

   25 expr: expr T_VEZES . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 63
    termo  go to state 38


State 50

   32 expr: expr T_E . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 64
    termo  go to state 38


State 51

   33 expr: expr T_OU . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 65
    termo  go to state 38


State 52

   29 expr: expr T_MAIOR . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 66
    termo  go to state 38


State 53

   30 expr: expr T_MENOR . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 67
    termo  go to state 38


State 54

   31 expr: expr T_IGUAL . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 68
    termo  go to state 38


State 55

   26 expr: expr T_DIV . expr

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 69
    termo  go to state 38


State 56

   23 selecao: T_SE expr T_ENTAO . lista_comandos T_SENAO lista_comandos T_FIMSE

    T_LEIA     shift, and go to state 14
    T_ESCREVA  shift, and go to state 15
    T_SE       shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_REPITA   shift, and go to state 18
    T_IDENTIF  shift, and go to state 19

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 70
    comando         go to state 21
    leitura         go to state 22
    escrita         go to state 23
    repeticao       go to state 24
    repita          go to state 25
    selecao         go to state 26
    atribuicao      go to state 27


State 57

   21 repeticao: T_ENQTO expr T_FACA . lista_comandos T_FIMENQTO

    T_LEIA     shift, and go to state 14
    T_ESCREVA  shift, and go to state 15
    T_SE       shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_REPITA   shift, and go to state 18
    T_IDENTIF  shift, and go to state 19

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 71
    comando         go to state 21
    leitura         go to state 22
    escrita         go to state 23
    repeticao       go to state 24
    repita          go to state 25
    selecao         go to state 26
    atribuicao      go to state 27


State 58

   22 repita: T_REPITA lista_comandos T_ATE . expr T_FIMREPITA

    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NAO      shift, and go to state 33
    T_ABRE     shift, and go to state 34
    T_IDENTIF  shift, and go to state 35
    T_NUMERO   shift, and go to state 36

    expr   go to state 72
    termo  go to state 38


State 59

   24 atribuicao: T_IDENTIF T_ATRIB expr .
   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_VEZES  shift, and go to state 49
    T_E      shift, and go to state 50
    T_OU     shift, and go to state 51
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_DIV    shift, and go to state 55

    $default  reduce using rule 24 (atribuicao)


State 60

   40 termo: T_ABRE expr T_FECHA .

    $default  reduce using rule 40 (termo)


State 61

   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   27     | expr T_MAIS expr .
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 55

    $default  reduce using rule 27 (expr)


State 62

   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   28     | expr T_MENOS expr .
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 55

    $default  reduce using rule 28 (expr)


State 63

   25 expr: expr . T_VEZES expr
   25     | expr T_VEZES expr .
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    $default  reduce using rule 25 (expr)


State 64

   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   32     | expr T_E expr .
   33     | expr . T_OU expr

    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_VEZES  shift, and go to state 49
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_DIV    shift, and go to state 55

    $default  reduce using rule 32 (expr)


State 65

   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr
   33     | expr T_OU expr .

    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_VEZES  shift, and go to state 49
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_IGUAL  shift, and go to state 54
    T_DIV    shift, and go to state 55

    $default  reduce using rule 33 (expr)


State 66

   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   29     | expr T_MAIOR expr .
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 55

    $default  reduce using rule 29 (expr)


State 67

   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   30     | expr T_MENOR expr .
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 55

    $default  reduce using rule 30 (expr)


State 68

   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   31     | expr T_IGUAL expr .
   32     | expr . T_E expr
   33     | expr . T_OU expr

    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_VEZES  shift, and go to state 49
    T_MAIOR  shift, and go to state 52
    T_MENOR  shift, and go to state 53
    T_DIV    shift, and go to state 55

    $default  reduce using rule 31 (expr)


State 69

   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   26     | expr T_DIV expr .
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    $default  reduce using rule 26 (expr)


State 70

   23 selecao: T_SE expr T_ENTAO lista_comandos . T_SENAO lista_comandos T_FIMSE

    T_SENAO  shift, and go to state 73


State 71

   21 repeticao: T_ENQTO expr T_FACA lista_comandos . T_FIMENQTO

    T_FIMENQTO  shift, and go to state 74


State 72

   22 repita: T_REPITA lista_comandos T_ATE expr . T_FIMREPITA
   25 expr: expr . T_VEZES expr
   26     | expr . T_DIV expr
   27     | expr . T_MAIS expr
   28     | expr . T_MENOS expr
   29     | expr . T_MAIOR expr
   30     | expr . T_MENOR expr
   31     | expr . T_IGUAL expr
   32     | expr . T_E expr
   33     | expr . T_OU expr

    T_FIMREPITA  shift, and go to state 75
    T_MAIS       shift, and go to state 47
    T_MENOS      shift, and go to state 48
    T_VEZES      shift, and go to state 49
    T_E          shift, and go to state 50
    T_OU         shift, and go to state 51
    T_MAIOR      shift, and go to state 52
    T_MENOR      shift, and go to state 53
    T_IGUAL      shift, and go to state 54
    T_DIV        shift, and go to state 55


State 73

   23 selecao: T_SE expr T_ENTAO lista_comandos T_SENAO . lista_comandos T_FIMSE

    T_LEIA     shift, and go to state 14
    T_ESCREVA  shift, and go to state 15
    T_SE       shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_REPITA   shift, and go to state 18
    T_IDENTIF  shift, and go to state 19

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 76
    comando         go to state 21
    leitura         go to state 22
    escrita         go to state 23
    repeticao       go to state 24
    repita          go to state 25
    selecao         go to state 26
    atribuicao      go to state 27


State 74

   21 repeticao: T_ENQTO expr T_FACA lista_comandos T_FIMENQTO .

    $default  reduce using rule 21 (repeticao)


State 75

   22 repita: T_REPITA lista_comandos T_ATE expr T_FIMREPITA .

    $default  reduce using rule 22 (repita)


State 76

   23 selecao: T_SE expr T_ENTAO lista_comandos T_SENAO lista_comandos . T_FIMSE

    T_FIMSE  shift, and go to state 77


State 77

   23 selecao: T_SE expr T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE .

    $default  reduce using rule 23 (selecao)
